added tech used ul to sections

--- a/index.html
+++ b/index.html
@@ -15,9 +15,29 @@
         <hr>
         <p>Full Stack Developer</p>
     </header>
-    <section>Cycling Monuments</section>
-    <section>Ciclismo Snack Finder</section>
-    <section>Cycling Position Notes</section>
+    <section>
+        Cycling Monuments
+    <ul>
+        <li>HTML5</li>
+        <li>JS</li>
+        <li>JQuery</li>
+    </ul>
+    </section>
+    <section>
+        Ciclismo Snack Finder
+        <ul>
+            <li>HTML5</li>
+            <li>ReactJS</li>
+        </ul>
+    </section>
+    <section>
+        Cycling Position Notes
+        <ul>
+            <li>HTML5</li>
+            <li>ReactJS</li>
+            <li>Node</li>
+        </ul>
+    </section>
 </main>
 <footer role="contentinfo">TD3 Studios</footer>
 </body>
