updated font sizing

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p>Full Stack Developer</p>
     </header>
     <section>
-        Cycling Monuments
+        <p>Cycling Monuments</p>
     <ul>
         <li>HTML5</li>
         <li>JS</li>
@@ -24,14 +24,14 @@
     </ul>
     </section>
     <section>
-        Ciclismo Snack Finder
+        <p>Ciclismo Snack Finder</p>
         <ul>
             <li>HTML5</li>
             <li>ReactJS</li>
         </ul>
     </section>
     <section>
-        Cycling Position Notes
+        <p>Cycling Position Notes</p>
         <ul>
             <li>HTML5</li>
             <li>ReactJS</li>
