implement tech stack icons

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Todd Davis Wireframe</title>
+    <title>Todd C. Davis</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
+          crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
@@ -18,24 +20,24 @@
     <section>
         <p>Cycling Monuments</p>
     <ul>
-        <li>HTML5</li>
-        <li>JS</li>
-        <li>JQuery</li>
+        <li class="html5_icon"></li>
+        <li class="javascript_icon"></li>
+        <li class="jquery_icon"></li>
     </ul>
     </section>
     <section>
         <p>Ciclismo Snack Finder</p>
         <ul>
-            <li>HTML5</li>
-            <li>ReactJS</li>
+            <li class="html5_icon"></li>
+            <li class="react_icon"></li>
         </ul>
     </section>
     <section>
         <p>Cycling Position Notes</p>
         <ul>
-            <li>HTML5</li>
-            <li>ReactJS</li>
-            <li>Node</li>
+            <li class="html5_icon"></li>
+            <li class="react_icon"></li>
+            <li class="nodejs_icon"></li>
         </ul>
     </section>
 </main>
