--- a/index.html
+++ b/index.html
@@ -11,61 +11,29 @@
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-<nav class="nav" role="navigation">
-    <div class="logo">
-        <div class="td3_logo"></div>
+<div class="content">
+    <nav class="nav" role="navigation">
+        <div class="logo">
+            <div class="td3_logo"></div>
+        </div>
+        <div class="hamburger"><i class="fas fa-bars fa-lg"></i></div>
+    </nav>
+    <div class="nav_panel">
+        <button id='projects' class="nav_button" type="submit">Projects</button>
+        <button id='about' class="nav_button" type="submit">About</button>
+        <ul class="nav_social_ul">
+            <li class="nav_social_li"><span class="social_icon"><i class="fab fa-linkedin-in fa-lg"></i></span></li>
+            <li class="nav_social_li"><span class="social_icon"><i class="fab fa-github fa-lg"></i></span></li>
+            <li class="nav_social_li"><span class="social_icon"><i class="fas fa-envelope fa-lg"></i></span></li>
+        </ul>
     </div>
-    <div class="hamburger"><i class="fas fa-bars fa-lg"></i></div>
-</nav>
-<div class="nav_panel">
-    <button id='projects' class="nav_button" type="submit">Projects</button>
-    <button id='about' class="nav_button" type="submit">About</button>
-    <ul class="nav_ul">
-        <li onclick="window.open('https://www.linkedin.com/in/todd-c-davis/','target=blank')"
-            class="icon_li linkedin_icon"></li>
-        <li onclick="window.open('https://github.com/toddcd','target=blank')" class="icon_li github_icon"></li>
-        <li class="icon_li email_icon"></li>
-    </ul>
+    <main role="main" id="main">
+        <!--Main content will be generated in script.js-->
+    </main>
 </div>
-<header role="banner">
-    <p>Todd<span>Davis</span></p>
-    <hr>
-    <p>Full Stack Developer</p>
-</header>
-<main role="main" id="main">
-    <h1 class="ph1">projects</h1>
-    <section class="monuments project">
-
-        <ul class="stack_ul">
-            <li class="icon_li html5_icon"></li>
-            <li class="icon_li javascript_icon"></li>
-            <li class="icon_li jquery_icon"></li>
-        </ul>
-    </section>
-    <section class="project">
-        <div>
-            <p>Ciclismo Snack Finder</p>
-        </div>
-        <ul class="stack_ul">
-            <li class="icon_li html5_icon"></li>
-            <li class="icon_li javascript_icon"></li>
-            <li class="icon_li react_icon"></li>
-        </ul>
-    </section>
-    <section class="project">
-        <div>
-            <p>Cycling Position Notes</p>
-        </div>
-        <ul class="stack_ul">
-            <li class="icon_li html5_icon"></li>
-            <li class="icon_li javascript_icon"></li>
-            <li class="icon_li react_icon"></li>
-            <li class="icon_li nodejs_icon"></li>
-        </ul>
-    </section>
-</main>
 <footer role="contentinfo">TD3 Studios</footer>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="data.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
