implemented responsive navbar

--- a/index.html
+++ b/index.html
@@ -16,15 +16,24 @@
         <div class="logo">
             <div class="td3_logo"></div>
         </div>
-        <div class="hamburger"><i class="fas fa-bars fa-lg"></i></div>
+        <div class="nav_bar">
+            <button id="nav_bar_projects" class="nav_bar_button" type="submit">Projects</button>
+            <button id="nav_bar_about" class="nav_bar_button" type="submit">About</button>
+            <ul class="nav_bar_social_ul">
+                <li class="nav_bar_social_li"><span class="social_icon"><i class="nav-linkedin fab fa-linkedin-in fa-lg"></i></span></li>
+                <li class="nav_bar_social_li"><span class="social_icon"><i class="nav-github fab fa-github fa-lg"></i></span></li>
+                <li class="nav_bar_social_li"><span class="social_icon"><i class="nav-email fas fa-envelope fa-lg"></i></span></li>
+            </ul>
+        </div>
+        <div class="hamburger"><i class="fas fa-bars fa-2x"></i></div>
     </nav>
     <div class="nav_panel">
-        <button id='projects' class="nav_button" type="submit">Projects</button>
-        <button id='about' class="nav_button" type="submit">About</button>
-        <ul class="nav_social_ul">
-            <li class="nav_social_li"><span class="social_icon"><i class="fab fa-linkedin-in fa-lg"></i></span></li>
-            <li class="nav_social_li"><span class="social_icon"><i class="fab fa-github fa-lg"></i></span></li>
-            <li class="nav_social_li"><span class="social_icon"><i class="fas fa-envelope fa-lg"></i></span></li>
+        <button id="nav_panel_projects" class="nav_panel_button" type="submit">Projects</button>
+        <button id="nav_panel_about" class="nav_panel_button" type="submit">About</button>
+        <ul class="nav_panel_social_ul">
+            <li class="nav_panel_social_li"><span class="social_icon"><i class="nav-linkedin fab fa-linkedin-in fa-lg"></i></span></li>
+            <li class="nav_panel_social_li"><span class="social_icon"><i class="nav-github fab fa-github fa-lg"></i></span></li>
+            <li class="nav_panel_social_li"><span class="social_icon"><i class="nav-email fas fa-envelope fa-lg"></i></span></li>
         </ul>
     </div>
     <main role="main" id="main">
